--- a/packages/drawer/snippets/simple.mdx
+++ b/packages/drawer/snippets/simple.mdx
@@ -3,7 +3,7 @@ import { useEffect, useRef, useState } from 'react';
 /* You'll need to install @reach/portal which simplify creating portal*/
 import Portal from '@reach/portal';
 
-export const ModalPage = () => {
+export const DrawerPage = () => {
   const [isOpen, setIsOpen] = useState(false);
 
   const toggle = () => {
@@ -11,7 +11,7 @@ export const ModalPage = () => {
   };
 
   return (
-    <>
+    <div className="m-8">
       <button
         type="button"
         onClick={toggle}
@@ -19,53 +19,45 @@ export const ModalPage = () => {
       >
         Click to open me
       </button>
-      <Modal isOpen={isOpen} toggle={toggle}>
-        <Modal.Header>Modal title</Modal.Header>
-        <Modal.Body>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </Modal.Body>
-        <Modal.Footer>
-          <button
-            onClick={toggle}
-            className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-red-500"
-          >
-            Close
-          </button>
-          <button
-            onClick={toggle}
-            className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-blue-600"
-          >
-            Confirm
-          </button>
-        </Modal.Footer>
-      </Modal>
-    </>
+      <Drawer isOpen={isOpen} toggle={toggle} position="left">
+        <h2 className="px-4 pt-4 text-2xl md:text-3xl font-light">
+          React UI librairies
+        </h2>
+        <ul className="list-disc pl-8 pt-4 text-gray-700">
+          <li className="mb-2">Chakra-UI</li>
+          <li className="mb-2">MDBootstrap</li>
+          <li className="mb-2">React-bootstrap</li>
+          <li className="mb-2">Material UI</li>
+          <li className="mb-2">Supabase UI</li>
+          <li className="mb-2">Ant Design</li>
+          <li className="mb-2">ReactStrap</li>
+          <li>React Suite</li>
+        </ul>
+      </Drawer>
+    </div>
   );
 };
 
 /* Logic */
-
 const style = {
-  container: `fixed top-0 overflow-y-auto left-0 z-40 w-full h-full m-0`,
+  container: `fixed top-0 left-0 z-40 w-full h-full m-0 overflow-hidden`,
+  animation: {
+    left: 'animate-drawer-left',
+  },
   content: `relative flex flex-col bg-white pointer-events-auto`,
-  orientation: `mt-12 mx-8 pb-6 md:w-12/12 md:pt-12 focus:outline-none`,
+  orientation: {
+    left: `flex w-8/12 md:w-80 lg:w-96 h-full left-0 mx-0 my-0 absolute focus:outline-none `,
+  },
   overlay: `fixed top-0 left-0 z-30 w-screen h-screen bg-black opacity-50`,
-  header: `items-start justify-between p-4 border-b border-gray-300`,
-  headerTitle: `text-2xl md:text-3xl font-light`,
-  body: `flex-shrink flex-grow p-4`,
-  footer: `flex flex-wrap items-center justify-end p-3 border-t border-gray-300`,
 };
 
-const Modal = ({ children, isOpen, toggle }) => {
-  const ref = useRef();
+const Drawer = ({ children, isOpen, toggle }) => {
+  const ref = useRef(null);
 
-  // close modal when you click outside the dialog
+  // close drawer when you click outside the dialog
   useEffect(() => {
     const handleOutsideClick = (event) => {
-      if (!ref.current?.contains(event.target)) {
+      if (!ref?.current?.contains(event.target)) {
         if (!isOpen) return;
         toggle(false);
       }
@@ -74,7 +66,7 @@ const Modal = ({ children, isOpen, toggle }) => {
     return () => window.removeEventListener('click', handleOutsideClick);
   }, [isOpen, ref]);
 
-  // close modal when you click on "ESC" key
+  // close drawer when you click on "ESC" key
   useEffect(() => {
     const handleEscape = (event) => {
       if (!isOpen) return;
@@ -86,10 +78,9 @@ const Modal = ({ children, isOpen, toggle }) => {
     return () => document.removeEventListener('keyup', handleEscape);
   }, [isOpen]);
 
-  // Put focus on modal dialogue, hide scrollbar and prevent body from moving when modal is open
+  // hide scrollbar and prevent body from moving when drawer is open
   useEffect(() => {
     if (!isOpen) return;
-    ref.current?.focus();
     const overflow = document.documentElement.style.overflow;
     const paddingRight = document.documentElement.style.paddingRight;
     const scrollbarWidth =
@@ -110,12 +101,14 @@ const Modal = ({ children, isOpen, toggle }) => {
           <div className={style.container}>
             <div
               aria-modal={true}
-              className={style.orientation}
+              className={style.orientation.left}
               ref={ref}
               role="dialogue"
               tabIndex={-1}
             >
-              <div className={style.content}>{children}</div>
+              <div className={`${style.animation.left} ${style.content}`}>
+                {children}
+              </div>
             </div>
           </div>
         </>
@@ -123,12 +116,4 @@ const Modal = ({ children, isOpen, toggle }) => {
     </Portal>
   );
 };
-
-Modal.Header = ({ children }) => (
-  <div className={style.header}>
-    <h4 className={style.headerTitle}>{children}</h4>
-  </div>
-);
-Modal.Body = ({ children }) => <div className={style.body}>{children}</div>;
-Modal.Footer = ({ children }) => <div className={style.footer}>{children}</div>;
 ```
