--- a/packages/modal/snippets/animation.mdx
+++ b/packages/modal/snippets/animation.mdx
@@ -46,11 +46,12 @@ export const ModalPage = () => {
   );
 };
 
-/* Modal logic*/
+/* Logic */
+
 const style = {
-  container: `fixed top-0 left-0 z-40 w-full h-full m-0 overflow-y-auto`,
-  content: `animate-modal-top relative flex flex-col bg-white pointer-events-auto`,
-  orientation: `mt-12 mx-8 pb-6 md:m-auto md:w-6/12 lg:w-4/12 md:pt-12`,
+  container: `fixed top-0 overflow-y-auto left-0 z-40 w-full h-full m-0`,
+  content: `animate-modal relative flex flex-col bg-white pointer-events-auto`,
+  orientation: `mt-12 mx-8 pb-6 md:m-auto md:w-6/12 lg:w-4/12 md:pt-12 focus:outline-none`,
   overlay: `fixed top-0 left-0 z-30 w-screen h-screen bg-black opacity-50`,
   header: `items-start justify-between p-4 border-b border-gray-300`,
   headerTitle: `text-2xl md:text-3xl font-light`,
@@ -61,6 +62,7 @@ const style = {
 const Modal = ({ children, isOpen, toggle }) => {
   const ref = useRef();
 
+  // close modal when you click outside the dialog
   useEffect(() => {
     const handleOutsideClick = (event) => {
       if (!ref.current?.contains(event.target)) {
@@ -72,6 +74,34 @@ const Modal = ({ children, isOpen, toggle }) => {
     return () => window.removeEventListener('click', handleOutsideClick);
   }, [isOpen, ref]);
 
+  // close modal when you click on "ESC" key
+  useEffect(() => {
+    const handleEscape = (event) => {
+      if (!isOpen) return;
+      if (event.key === 'Escape') {
+        toggle(false);
+      }
+    };
+    document.addEventListener('keyup', handleEscape);
+    return () => document.removeEventListener('keyup', handleEscape);
+  }, [isOpen]);
+
+  // Put focus on modal dialogue, hide scrollbar and prevent body from moving when modal is open
+  useEffect(() => {
+    if (!isOpen) return;
+    ref.current?.focus();
+    const overflow = document.documentElement.style.overflow;
+    const paddingRight = document.documentElement.style.paddingRight;
+    const scrollbarWidth =
+      window.innerWidth - document.documentElement.clientWidth;
+    document.documentElement.style.overflow = 'hidden';
+    document.documentElement.style.paddingRight = `${scrollbarWidth}px`;
+    return () => {
+      document.documentElement.style.overflow = overflow;
+      document.documentElement.style.paddingRight = paddingRight;
+    };
+  }, [isOpen]);
+
   return (
     <Portal>
       {isOpen && (
@@ -79,10 +109,11 @@ const Modal = ({ children, isOpen, toggle }) => {
           <div className={style.overlay} />
           <div className={style.container}>
             <div
+              aria-modal={true}
               className={style.orientation}
               ref={ref}
               role="dialogue"
-              aria-modal={true}
+              tabIndex={-1}
             >
               <div className={style.content}>{children}</div>
             </div>
