--- a/website/utils/tailwindConfig.mdx
+++ b/website/utils/tailwindConfig.mdx
@@ -4,22 +4,56 @@ module.exports = {
   theme: {
     extend: {
       animation: {
-        /* If you are using Toast component*/
+        // If you are using Toast component
         left: 'left 0.3s',
-
-        /* If you are using Toast component*/
         right: 'right 0.3s',
 
-        /* If you are using Modal position right*/
-        'modal-right': 'modal-right 0.3s',
+        // if you are using the animate variant of the modal
+        modal: 'modal 0.3s',
 
-        /* If you are using Modal position top*/
-        'modal-top': 'modal-top 0.3s',
+        // if you are using drawer variant right
+        'drawer-right': 'drawer-right 0.3s',
 
-        /* If you are using Modal position left*/
-        'modal-left': 'modal-left 0.3s',
+        // if you are using drawer variant left
+        'drawer-left': 'drawer-left 0.3s',
+
+        // if you are using drawer variant top
+        'drawer-top': 'drawer-top 0.3s',
+
+        // if you are using drawer variant bottom
+        'drawer-bottom': 'drawer-bottom 0.3s',
       },
       keyframes: {
+        // if you are using drawer variant right
+        'drawer-right': {
+          '0%, 100%': { right: '-500px' },
+          '100%': { right: '0' },
+        },
+
+        // if you are using drawer variant left
+        'drawer-left': {
+          '0%, 100%': { left: '-500px' },
+          '100%': { left: '0' },
+        },
+
+        // if you are using drawer variant top
+        'drawer-top': {
+          '0%, 100%': { top: '-500px' },
+          '100%': { top: '0' },
+        },
+
+         // if you are using drawer variant bottom
+        'drawer-bottom': {
+          '0%, 100%': { bottom: '-500px' },
+          '100%': { bottom: '0' },
+        },
+
+        /* If you are using Modal position top*/
+        modal: {
+          '0%, 100%': { top: '-500px' },
+          '100%': { top: '0' },
+        },
+
         /* If you are using Toast component*/
         left: {
           '0%, 100%': { transform: 'translateX(-100%)' },
@@ -28,24 +62,6 @@ module.exports = {
         right: {
           '0%, 100%': { transform: 'translateX(100%)' },
           '100%': { transform: 'translateX(0)' },
-        },
-
-        /* If you are using Modal position top*/
-        'modal-top': {
-          '0%, 100%': { top: '-500px' },
-          '100%': { top: '0' },
-        },
-
-        /* If you are using Modal position right*/
-        'modal-right': {
-          '0%, 100%': { right: '-500px' },
-          '100%': { right: '0' },
-        },
-
-        /* If you are using Modal position left*/
-        'modal-left': {
-          '0%, 100%': { left: '-500px' },
-          '100%': { left: '0' },
         },
       },
     },
