--- a/website/utils/tailwindConfig.mdx
+++ b/website/utils/tailwindConfig.mdx
@@ -42,13 +42,13 @@ module.exports = {
           '100%': { top: '0' },
         },
 
-         // if you are using drawer variant bottom
+        // if you are using drawer variant bottom
         'drawer-bottom': {
           '0%, 100%': { bottom: '-500px' },
           '100%': { bottom: '0' },
         },
 
-        /* If you are using Modal position top*/
+        // if you are using the animate variant of the modal
         modal: {
           '0%, 100%': { top: '-500px' },
           '100%': { top: '0' },
