--- a/packages/field/snippets/with-formik.mdx
+++ b/packages/field/snippets/with-formik.mdx
@@ -11,7 +11,7 @@ export const FormPage = () => {
     },
     validationSchema: validateSchema,
     onSubmit: (values) => {
-      console.log(values);
+      window.alert(JSON.stringify(values));
     },
   });
 
