--- a/packages/field/snippets/with-react-hook-form.mdx
+++ b/packages/field/snippets/with-react-hook-form.mdx
@@ -5,8 +5,8 @@ import { useForm } from 'react-hook-form';
 export const FormPage = () => {
   const { register, handleSubmit, errors } = useForm();
 
-  const onSubmit = (data) => {
-    console.log(data);
+  const onSubmit = (values) => {
+    window.alert(JSON.stringify(values));
   };
 
   return (
