--- a/packages/dropdown/snippets/with-separator.mdx
+++ b/packages/dropdown/snippets/with-separator.mdx
@@ -44,6 +44,7 @@ const useToggle = () => {
     setShow(!show);
   };
 
+  // close dropdown when you click outside
   useEffect(() => {
     const handleOutsideClick = (event) => {
       if (!ref.current?.contains(event.target)) {
@@ -55,6 +56,7 @@ const useToggle = () => {
     return () => window.removeEventListener('click', handleOutsideClick);
   }, [show, ref]);
 
+  // close dropdown when you click on "ESC" key
   useEffect(() => {
     const handleEscape = (event) => {
       if (!show) return;
