update field component
- update react-hook-form
- update example and snippets of field component with react-hook-form

--- a/packages/field/snippets/default.mdx
+++ b/packages/field/snippets/default.mdx
@@ -48,7 +48,7 @@ const Field = forwardRef(
           aria-required={dot}
           aria-invalid={!!error}
           className={`${style.default} ${error && style.error} ${
-            disabled ? 'cursor-not-allowed' : ''
+            disabled ? style.disabled : ''
           }`}
           disabled={disabled}
           name={name}
