--- a/packages/field/snippets/with-react-hook-form.mdx
+++ b/packages/field/snippets/with-react-hook-form.mdx
@@ -49,15 +49,18 @@ const style = {
   checkboxContainer: `relative w-10 mr-2 align-middle select-none mt-2`,
   checkboxLabel: `block overflow-hidden h-6 rounded-full bg-gray-300`,
   container: `relative mb-6 mt-3`,
-  default: `rounded-lg flex-1 mt-1 w-full py-1.5 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-sm text-base focus:outline-none focus:ring-2 focus:border-transparent border border-gray-300 border-transparent`,
+  default: `text-base relative flex flex-1 w-full mt-1 rounded-md py-2 px-4 bg-white text-gray-700 placeholder-gray-400 text-base focus:outline-none focus:ring-1 focus:border-transparent border border-transparent`,
   disabled: `cursor-not-allowed`,
   dot: `text-red-500 pl-0.5`,
-  error: `ring-red-500 ring-2`,
-  errorMessage: `text-sm text-red-500 mb-6 mt-1`,
+  error: `ring-red-500 ring-1`,
+  errorMessage: `text-sm text-red-500 mt-2`,
 };
 
-const Field = forwardRef(
-  ({ disabled, dot, error, label, name, type = 'text', ...rest }, ref) => {
+export const Field = forwardRef(
+  (
+    { disabled, dot, error, icon, label, name, type = 'text', ...rest },
+    ref,
+  ) => {
     let component;
 
     // if you won't use select, you can delete this part
@@ -66,10 +69,10 @@ const Field = forwardRef(
         <select
           aria-required={dot}
           aria-invalid={!!error}
-          className={`${style.default} ${error && style.error} ${
-            disabled ? style.disabled : ''
-          }`}
+          className={`${style.default} ${disabled ? style.disabled : ''}
+           ${error ? style.error : 'border-gray-300'}`}
           disabled={disabled}
+          id={name}
           name={name}
           ref={ref}
           {...rest}
@@ -83,10 +86,10 @@ const Field = forwardRef(
         <textarea
           aria-required={dot}
           aria-invalid={!!error}
-          className={`${style.default} ${disabled ? style.disabled : ''} ${
-            error && style.error
-          }`}
+          className={`${style.default} ${disabled ? style.disabled : ''}
+          ${error ? style.error : 'border-gray-300'}`}
           disabled={disabled}
+          id={name}
           name={name}
           ref={ref}
           {...rest}
@@ -103,6 +106,7 @@ const Field = forwardRef(
             aria-invalid={!!error}
             className={`${style.checkbox} ${disabled ? style.disabled : ''}`}
             disabled={disabled}
+            id={name}
             name={name}
             type="checkbox"
             {...rest}
@@ -115,18 +119,33 @@ const Field = forwardRef(
     // if you won't use input, you can delete this part
     if (type !== 'checkbox' && type !== 'select' && type !== 'textarea') {
       component = (
-        <input
-          aria-required={dot}
-          aria-invalid={!!error}
-          className={`${style.default} ${disabled ? style.disabled : ''} ${
-            error && style.error
-          }`}
-          disabled={disabled}
-          name={name}
-          type={type}
-          ref={ref}
-          {...rest}
-        />
+        <div className="relative">
+          <div className="absolute flex border border-transparent left-0 top-0 h-full w-10">
+            <div className="flex items-center justify-center rounded-tl rounded-bl z-10 text-gray-400 text-lg h-full w-full">
+              {icon}
+            </div>
+          </div>
+          <input
+            aria-required={dot}
+            aria-invalid={!!error}
+            className={`${style.default} ${icon ? 'pl-12' : ''}
+            ${error ? style.error : 'border-gray-300'}
+            ${disabled ? style.disabled : ''} `}
+            disabled={disabled}
+            id={name}
+            name={name}
+            type={type}
+            ref={ref}
+            {...rest}
+          />
+          {error && (
+            <>
+              {type !== 'textarea' &&
+                type !== 'select' &&
+                type !== 'checkbox' && <ErrorIcon />}
+            </>
+          )}
+        </div>
       );
     }
 
@@ -136,17 +155,8 @@ const Field = forwardRef(
           {label}
           {dot && <span className={style.dot}>*</span>}
         </label>
-
         {component}
-
-        {error && (
-          <>
-            {type !== 'textarea' &&
-              type !== 'select' &&
-              type !== 'checkbox' && <ErrorIcon />}
-            <p className={style.errorMessage}>{error}</p>
-          </>
-        )}
+        {error && <p className={style.errorMessage}>{error}</p>}
       </div>
     );
   },
