--- a/packages/field/snippets/with-react-hook-form.mdx
+++ b/packages/field/snippets/with-react-hook-form.mdx
@@ -54,9 +54,11 @@ const style = {
   dot: `text-red-500 pl-0.5`,
   error: `ring-red-500 ring-1`,
   errorMessage: `text-sm text-red-500 mt-2`,
+  iconContainer: `absolute flex border border-transparent left-0 top-0 h-full w-10`,
+  icon: `flex items-center justify-center rounded-tl rounded-bl z-10 text-gray-400 text-lg h-full w-full`,
 };
 
-export const Field = forwardRef(
+const Field = forwardRef(
   (
     { disabled, dot, error, icon, label, name, type = 'text', ...rest },
     ref,
@@ -120,10 +122,8 @@ export const Field = forwardRef(
     if (type !== 'checkbox' && type !== 'select' && type !== 'textarea') {
       component = (
         <div className="relative">
-          <div className="absolute flex border border-transparent left-0 top-0 h-full w-10">
-            <div className="flex items-center justify-center rounded-tl rounded-bl z-10 text-gray-400 text-lg h-full w-full">
-              {icon}
-            </div>
+          <div className={style.iconContainer}>
+            <div className={style.icon}>{icon}</div>
           </div>
           <input
             aria-required={dot}
@@ -138,13 +138,7 @@ export const Field = forwardRef(
             ref={ref}
             {...rest}
           />
-          {error && (
-            <>
-              {type !== 'textarea' &&
-                type !== 'select' &&
-                type !== 'checkbox' && <ErrorIcon />}
-            </>
-          )}
+          {error && <ErrorIcon />}
         </div>
       );
     }
