--- a/packages/modal/snippets/notClosedOutside.mdx
+++ b/packages/modal/snippets/notClosedOutside.mdx
@@ -1,5 +1,6 @@
 ```jsx
 import { useEffect, useRef, useState } from 'react';
+
 /* You'll need to install @reach/portal which simplify creating portal*/
 import Portal from '@reach/portal';
 
@@ -74,19 +75,25 @@ const Modal = ({ children, isOpen, toggle }) => {
     return () => document.removeEventListener('keyup', handleEscape);
   }, [isOpen]);
 
-  // Put focus on modal dialogue, hide scrollbar and prevent body from moving when modal is open
+  //hide scrollbar and prevent body from moving when modal is open
   useEffect(() => {
     if (!isOpen) return;
+
+    // Put focus on modal dialogue
     ref.current?.focus();
-    const overflow = document.documentElement.style.overflow;
-    const paddingRight = document.documentElement.style.paddingRight;
-    const scrollbarWidth =
-      window.innerWidth - document.documentElement.clientWidth;
-    document.documentElement.style.overflow = 'hidden';
-    document.documentElement.style.paddingRight = `${scrollbarWidth}px`;
+
+    const html = document.documentElement;
+
+    const overflow = html.style.overflow;
+    const paddingRight = html.style.paddingRight;
+    const scrollbarWidth = window.innerWidth - html.clientWidth;
+
+    html.style.overflow = 'hidden';
+    html.style.paddingRight = `${scrollbarWidth}px`;
+
     return () => {
-      document.documentElement.style.overflow = overflow;
-      document.documentElement.style.paddingRight = paddingRight;
+      html.style.overflow = overflow;
+      html.style.paddingRight = paddingRight;
     };
   }, [isOpen]);
 
