--- a/packages/list-group/snippets/simple.mdx
+++ b/packages/list-group/snippets/simple.mdx
@@ -15,6 +15,7 @@ const ListGroup = ({ children }) => (
 
 ListGroup.Item = ({ children, className }) => (
   <a
+    tabIndex={0}
     className={`${className} relative block py-3 px-5 relative -mb-px block border border-grey`}
   >
     {children}
