--- a/packages/code/snippets/blueOutline.mdx
+++ b/packages/code/snippets/blueOutline.mdx
@@ -3,7 +3,7 @@ import { useEffect, useState } from 'react';
 
 export const CodePage = () => (
   <div className="m-8">
-    <Code>yarn add swr react-table</Code>
+    <Code>yarn add swr react-documentationTable</Code>
   </div>
 );
 
